Fixed subscriptions pie chart going out of bounds

--- a/finance-website/frontend/src/pages/Dashboard.css
+++ b/finance-website/frontend/src/pages/Dashboard.css
@@ -3,6 +3,9 @@
         margin-top: 0px !important;
         height: auto !important;
     }
+    .Subs{
+        height:auto !important;
+    }
 }
 
 .column {
